fix: details button text wrap

--- a/frontend/src/app/map/map/containers/details-card/details-card.component.scss
+++ b/frontend/src/app/map/map/containers/details-card/details-card.component.scss
@@ -206,6 +206,9 @@
     box-shadow: 0 2px 0 0 $gray-light inset;
     .info-btn {
       margin-right: $spacing-2;
+      button {
+        white-space: nowrap;
+      }
     }
     // box-shadow: 0 -2px 0 0 black;
   }
